@@ -277,125 +277,6 @@ const struct sndbrdIntf joctronicIntf = {
 
 // dips and display
 
-#define JOCTRONIC_COMPORTS(game, balls) \
-  INPUT_PORTS_START(game) \
-  CORE_PORTS \
-  SIM_PORTS(balls) \
-  PORT_START /* 0 */ \
-    COREPORT_BIT   (0x0008, "Game start",     KEYCODE_1) \
-    COREPORT_BIT   (0x0001, "Coin 1",         KEYCODE_3) \
-    COREPORT_BIT   (0x0002, "Coin 2",         KEYCODE_4) \
-    COREPORT_BIT   (0x0010, "Service credit", KEYCODE_5) \
-    COREPORT_BIT   (0x0020, "Tilt",           KEYCODE_INSERT) \
-    COREPORT_BIT   (0x8000, "Test",           KEYCODE_7) \
-  PORT_START /* 1 */ \
-    COREPORT_DIPNAME( 0x0080, 0x0000, "Test mode") \
-      COREPORT_DIPSET(0x0000, DEF_STR(Off)) \
-      COREPORT_DIPSET(0x0080, DEF_STR(On)) \
-    COREPORT_DIPNAME( 0x0040, 0x0040, "Attract tune") \
-      COREPORT_DIPSET(0x0000, DEF_STR(Off)) \
-      COREPORT_DIPSET(0x0040, DEF_STR(On)) \
-    COREPORT_DIPNAME( 0x000f, 0x000f, "Slot #1 pricing (cred./coins)") \
-      COREPORT_DIPSET(0x000f, "1/1" ) \
-      COREPORT_DIPSET(0x000e, "2/1" ) \
-      COREPORT_DIPSET(0x000d, "3/1" ) \
-      COREPORT_DIPSET(0x000c, "4/1" ) \
-      COREPORT_DIPSET(0x000b, "5/1" ) \
-      COREPORT_DIPSET(0x000a, "6/1" ) \
-      COREPORT_DIPSET(0x0009, "8/1" ) \
-      COREPORT_DIPSET(0x0007, "1/2" ) \
-      COREPORT_DIPSET(0x0006, "2/2" ) \
-      COREPORT_DIPSET(0x0005, "3/2" ) \
-      COREPORT_DIPSET(0x0004, "1/3" ) \
-      COREPORT_DIPSET(0x0003, "2/3" ) \
-      COREPORT_DIPSET(0x0002, "1/4" ) \
-      COREPORT_DIPSET(0x0001, "1/5" ) \
-      COREPORT_DIPSET(0x0008, "0") \
-      COREPORT_DIPSET(0x0000, "0") \
-    COREPORT_DIPNAME( 0x0030, 0x0020, "Bonus credits for x coins #1") \
-      COREPORT_DIPSET(0x0030, DEF_STR(Off)) \
-      COREPORT_DIPSET(0x0020, "2" ) \
-      COREPORT_DIPSET(0x0010, "3" ) \
-      COREPORT_DIPSET(0x0000, "4" ) \
-    COREPORT_DIPNAME( 0x0f00, 0x0d00, "Slot #2 pricing (cred./coins)") \
-      COREPORT_DIPSET(0x0f00, "1/1" ) \
-      COREPORT_DIPSET(0x0e00, "2/1" ) \
-      COREPORT_DIPSET(0x0d00, "3/1" ) \
-      COREPORT_DIPSET(0x0c00, "4/1" ) \
-      COREPORT_DIPSET(0x0b00, "5/1" ) \
-      COREPORT_DIPSET(0x0a00, "6/1" ) \
-      COREPORT_DIPSET(0x0900, "8/1" ) \
-      COREPORT_DIPSET(0x0700, "1/2" ) \
-      COREPORT_DIPSET(0x0600, "2/2" ) \
-      COREPORT_DIPSET(0x0500, "3/2" ) \
-      COREPORT_DIPSET(0x0400, "1/3" ) \
-      COREPORT_DIPSET(0x0300, "2/3" ) \
-      COREPORT_DIPSET(0x0200, "1/4" ) \
-      COREPORT_DIPSET(0x0100, "1/5" ) \
-      COREPORT_DIPSET(0x0800, "0") \
-      COREPORT_DIPSET(0x0000, "0") \
-    COREPORT_DIPNAME( 0x3000, 0x3000, "Bonus credits for x coins #2") \
-      COREPORT_DIPSET(0x3000, DEF_STR(Off)) \
-      COREPORT_DIPSET(0x2000, "2" ) \
-      COREPORT_DIPSET(0x1000, "3" ) \
-      COREPORT_DIPSET(0x0000, "4" ) \
-    COREPORT_DIPNAME( 0x4000, 0x0000, "S15") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x4000, "1" ) \
-    COREPORT_DIPNAME( 0x8000, 0x0000, "S16") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x8000, "1" ) \
-  PORT_START /* 2 */ \
-    COREPORT_DIPNAME( 0x0070, 0x0050, "Balls per game") \
-      COREPORT_DIPSET(0x0070, "1" ) \
-      COREPORT_DIPSET(0x0060, "2" ) \
-      COREPORT_DIPSET(0x0050, "3" ) \
-      COREPORT_DIPSET(0x0040, "4" ) \
-      COREPORT_DIPSET(0x0030, "5" ) \
-      COREPORT_DIPSET(0x0020, "6" ) \
-      COREPORT_DIPSET(0x0010, "8" ) \
-      COREPORT_DIPSET(0x0000, "10" ) \
-    COREPORT_DIPNAME( 0x0001, 0x0000, "S17") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0001, "1" ) \
-    COREPORT_DIPNAME( 0x0002, 0x0000, "S18") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0002, "1" ) \
-    COREPORT_DIPNAME( 0x0004, 0x0000, "S19") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0004, "1" ) \
-    COREPORT_DIPNAME( 0x0008, 0x0000, "S20") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0008, "1" ) \
-    COREPORT_DIPNAME( 0x0080, 0x0000, "S24") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0080, "1" ) \
-    COREPORT_DIPNAME( 0x0100, 0x0000, "S25") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0100, "1" ) \
-    COREPORT_DIPNAME( 0x0200, 0x0000, "S26") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0200, "1" ) \
-    COREPORT_DIPNAME( 0x0400, 0x0000, "S27") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0400, "1" ) \
-    COREPORT_DIPNAME( 0x0800, 0x0000, "S28") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x0800, "1" ) \
-    COREPORT_DIPNAME( 0x1000, 0x0000, "S29") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x1000, "1" ) \
-    COREPORT_DIPNAME( 0x2000, 0x0000, "S30") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x2000, "1" ) \
-    COREPORT_DIPNAME( 0x4000, 0x0000, "S31") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x4000, "1" ) \
-    COREPORT_DIPNAME( 0x8000, 0x0000, "S32") \
-      COREPORT_DIPSET(0x0000, "0" ) \
-      COREPORT_DIPSET(0x8000, "1" ) \
-  INPUT_PORTS_END
-
 static core_tLCDLayout dispAlpha[] = {
   {0, 0,41,7,CORE_SEG7},
   {3,13, 1,7,CORE_SEG7S},
@@ -415,11 +296,127 @@ static core_tGameData punkywilGameData = {0,dispAlpha,{FLIP_SWNO(88,87),0,0,0,SN
 static void init_punkywil(void) { core_gameData = &punkywilGameData; }
 ROM_START(punkywil)
   NORMALREGION(0x10000, REGION_CPU1)
-    ROM_LOAD("pw_game.bin", 0x0000, 0x4000, NO_DUMP)
+    ROM_LOAD("pw_game.bin", 0x0000, 0x4000, CRC(f408367a) SHA1(967ab8a16e64273abf8e8cc4faab60e2c9a4856b))
   NORMALREGION(0x10000, REGION_CPU2)
     ROM_LOAD("pw_sound.bin", 0x0000, 0x4000, CRC(b2e3a201) SHA1(e3b0a5b22827683382b61c21607201cd470062ee))
 ROM_END
-JOCTRONIC_COMPORTS(punkywil, 1)
+INPUT_PORTS_START(punkywil)
+CORE_PORTS
+SIM_PORTS(1)
+PORT_START /* 0 */
+  COREPORT_BIT   (0x0008, "Game start",     KEYCODE_1)
+  COREPORT_BIT   (0x0001, "Coin 1",         KEYCODE_3)
+  COREPORT_BIT   (0x0002, "Coin 2",         KEYCODE_4)
+  COREPORT_BIT   (0x0010, "Service credit", KEYCODE_5)
+  COREPORT_BIT   (0x0020, "Tilt",           KEYCODE_INSERT)
+  COREPORT_BIT   (0x8000, "Test",           KEYCODE_7)
+PORT_START /* 1 */
+  COREPORT_DIPNAME( 0x0080, 0x0000, "Test mode")
+    COREPORT_DIPSET(0x0000, DEF_STR(Off))
+    COREPORT_DIPSET(0x0080, DEF_STR(On))
+  COREPORT_DIPNAME( 0x0040, 0x0040, "Attract tune")
+    COREPORT_DIPSET(0x0000, DEF_STR(Off))
+    COREPORT_DIPSET(0x0040, DEF_STR(On))
+  COREPORT_DIPNAME( 0x000f, 0x000f, "Slot #1 pricing (cred./coins)")
+    COREPORT_DIPSET(0x000f, "1/1" )
+    COREPORT_DIPSET(0x000e, "2/1" )
+    COREPORT_DIPSET(0x000d, "3/1" )
+    COREPORT_DIPSET(0x000c, "4/1" )
+    COREPORT_DIPSET(0x000b, "5/1" )
+    COREPORT_DIPSET(0x000a, "6/1" )
+    COREPORT_DIPSET(0x0009, "8/1" )
+    COREPORT_DIPSET(0x0007, "1/2" )
+    COREPORT_DIPSET(0x0006, "2/2" )
+    COREPORT_DIPSET(0x0005, "3/2" )
+    COREPORT_DIPSET(0x0004, "1/3" )
+    COREPORT_DIPSET(0x0003, "2/3" )
+    COREPORT_DIPSET(0x0002, "1/4" )
+    COREPORT_DIPSET(0x0001, "1/5" )
+    COREPORT_DIPSET(0x0008, "0")
+    COREPORT_DIPSET(0x0000, "0")
+  COREPORT_DIPNAME( 0x0030, 0x0020, "Bonus credits for x coins #1")
+    COREPORT_DIPSET(0x0030, DEF_STR(Off))
+    COREPORT_DIPSET(0x0020, "2" )
+    COREPORT_DIPSET(0x0010, "3" )
+    COREPORT_DIPSET(0x0000, "4" )
+  COREPORT_DIPNAME( 0x0f00, 0x0d00, "Slot #2 pricing (cred./coins)")
+    COREPORT_DIPSET(0x0f00, "1/1" )
+    COREPORT_DIPSET(0x0e00, "2/1" )
+    COREPORT_DIPSET(0x0d00, "3/1" )
+    COREPORT_DIPSET(0x0c00, "4/1" )
+    COREPORT_DIPSET(0x0b00, "5/1" )
+    COREPORT_DIPSET(0x0a00, "6/1" )
+    COREPORT_DIPSET(0x0900, "8/1" )
+    COREPORT_DIPSET(0x0700, "1/2" )
+    COREPORT_DIPSET(0x0600, "2/2" )
+    COREPORT_DIPSET(0x0500, "3/2" )
+    COREPORT_DIPSET(0x0400, "1/3" )
+    COREPORT_DIPSET(0x0300, "2/3" )
+    COREPORT_DIPSET(0x0200, "1/4" )
+    COREPORT_DIPSET(0x0100, "1/5" )
+    COREPORT_DIPSET(0x0800, "0")
+    COREPORT_DIPSET(0x0000, "0")
+  COREPORT_DIPNAME( 0x3000, 0x3000, "Bonus credits for x coins #2")
+    COREPORT_DIPSET(0x3000, DEF_STR(Off))
+    COREPORT_DIPSET(0x2000, "2" )
+    COREPORT_DIPSET(0x1000, "3" )
+    COREPORT_DIPSET(0x0000, "4" )
+  COREPORT_DIPNAME( 0x4000, 0x0000, "S15")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x4000, "1" )
+  COREPORT_DIPNAME( 0x8000, 0x0000, "S16")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x8000, "1" )
+PORT_START /* 2 */
+  COREPORT_DIPNAME( 0x0700, 0x0500, "Balls per game")
+    COREPORT_DIPSET(0x0700, "1" )
+    COREPORT_DIPSET(0x0600, "2" )
+    COREPORT_DIPSET(0x0500, "3" )
+    COREPORT_DIPSET(0x0400, "4" )
+    COREPORT_DIPSET(0x0300, "5" )
+    COREPORT_DIPSET(0x0200, "6" )
+    COREPORT_DIPSET(0x0100, "8" )
+    COREPORT_DIPSET(0x0000, "10" )
+  COREPORT_DIPNAME( 0x0001, 0x0000, "S17")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0001, "1" )
+  COREPORT_DIPNAME( 0x0002, 0x0000, "S18")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0002, "1" )
+  COREPORT_DIPNAME( 0x0004, 0x0000, "S19")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0004, "1" )
+  COREPORT_DIPNAME( 0x0008, 0x0000, "S20")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0008, "1" )
+  COREPORT_DIPNAME( 0x0010, 0x0000, "S21")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0010, "1" )
+  COREPORT_DIPNAME( 0x0020, 0x0000, "S22")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0020, "1" )
+  COREPORT_DIPNAME( 0x0040, 0x0000, "S23")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0040, "1" )
+  COREPORT_DIPNAME( 0x0080, 0x0000, "S24")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0080, "1" )
+  COREPORT_DIPNAME( 0x0800, 0x0000, "S28")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0800, "1" )
+  COREPORT_DIPNAME( 0x1000, 0x0000, "S29")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x1000, "1" )
+  COREPORT_DIPNAME( 0x2000, 0x0000, "S30")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x2000, "1" )
+  COREPORT_DIPNAME( 0x4000, 0x0000, "S31")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x4000, "1" )
+  COREPORT_DIPNAME( 0x8000, 0x0000, "S32")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x8000, "1" )
+INPUT_PORTS_END
 CORE_GAMEDEFNV(punkywil, "Punky Willy", 1986, "Joctronic", joctronicS2, 0)
 
 /*-------------------------------------------------------------------
@@ -433,7 +430,123 @@ ROM_START(walkyria)
   NORMALREGION(0x10000, REGION_CPU2)
     ROM_LOAD("wk_sound.bin", 0x0000, 0x4000, CRC(81f74b0a) SHA1(1ef73bf42f5b1f54526202d3ff89698a04c7b41a))
 ROM_END
-JOCTRONIC_COMPORTS(walkyria, 1)
+INPUT_PORTS_START(walkyria)
+CORE_PORTS
+SIM_PORTS(1)
+PORT_START /* 0 */
+  COREPORT_BIT   (0x0008, "Game start",     KEYCODE_1)
+  COREPORT_BIT   (0x0001, "Coin 1",         KEYCODE_3)
+  COREPORT_BIT   (0x0002, "Coin 2",         KEYCODE_4)
+  COREPORT_BIT   (0x0010, "Service credit", KEYCODE_5)
+  COREPORT_BIT   (0x0020, "Tilt",           KEYCODE_INSERT)
+  COREPORT_BIT   (0x8000, "Test",           KEYCODE_7)
+PORT_START /* 1 */
+  COREPORT_DIPNAME( 0x0080, 0x0000, "Test mode")
+    COREPORT_DIPSET(0x0000, DEF_STR(Off))
+    COREPORT_DIPSET(0x0080, DEF_STR(On))
+  COREPORT_DIPNAME( 0x0040, 0x0040, "Attract tune")
+    COREPORT_DIPSET(0x0000, DEF_STR(Off))
+    COREPORT_DIPSET(0x0040, DEF_STR(On))
+  COREPORT_DIPNAME( 0x000f, 0x000f, "Slot #1 pricing (cred./coins)")
+    COREPORT_DIPSET(0x000f, "1/1" )
+    COREPORT_DIPSET(0x000e, "2/1" )
+    COREPORT_DIPSET(0x000d, "3/1" )
+    COREPORT_DIPSET(0x000c, "4/1" )
+    COREPORT_DIPSET(0x000b, "5/1" )
+    COREPORT_DIPSET(0x000a, "6/1" )
+    COREPORT_DIPSET(0x0009, "8/1" )
+    COREPORT_DIPSET(0x0007, "1/2" )
+    COREPORT_DIPSET(0x0006, "2/2" )
+    COREPORT_DIPSET(0x0005, "3/2" )
+    COREPORT_DIPSET(0x0004, "1/3" )
+    COREPORT_DIPSET(0x0003, "2/3" )
+    COREPORT_DIPSET(0x0002, "1/4" )
+    COREPORT_DIPSET(0x0001, "1/5" )
+    COREPORT_DIPSET(0x0008, "0")
+    COREPORT_DIPSET(0x0000, "0")
+  COREPORT_DIPNAME( 0x0030, 0x0020, "Bonus credits for x coins #1")
+    COREPORT_DIPSET(0x0030, DEF_STR(Off))
+    COREPORT_DIPSET(0x0020, "2" )
+    COREPORT_DIPSET(0x0010, "3" )
+    COREPORT_DIPSET(0x0000, "4" )
+  COREPORT_DIPNAME( 0x0f00, 0x0d00, "Slot #2 pricing (cred./coins)")
+    COREPORT_DIPSET(0x0f00, "1/1" )
+    COREPORT_DIPSET(0x0e00, "2/1" )
+    COREPORT_DIPSET(0x0d00, "3/1" )
+    COREPORT_DIPSET(0x0c00, "4/1" )
+    COREPORT_DIPSET(0x0b00, "5/1" )
+    COREPORT_DIPSET(0x0a00, "6/1" )
+    COREPORT_DIPSET(0x0900, "8/1" )
+    COREPORT_DIPSET(0x0700, "1/2" )
+    COREPORT_DIPSET(0x0600, "2/2" )
+    COREPORT_DIPSET(0x0500, "3/2" )
+    COREPORT_DIPSET(0x0400, "1/3" )
+    COREPORT_DIPSET(0x0300, "2/3" )
+    COREPORT_DIPSET(0x0200, "1/4" )
+    COREPORT_DIPSET(0x0100, "1/5" )
+    COREPORT_DIPSET(0x0800, "0")
+    COREPORT_DIPSET(0x0000, "0")
+  COREPORT_DIPNAME( 0x3000, 0x3000, "Bonus credits for x coins #2")
+    COREPORT_DIPSET(0x3000, DEF_STR(Off))
+    COREPORT_DIPSET(0x2000, "2" )
+    COREPORT_DIPSET(0x1000, "3" )
+    COREPORT_DIPSET(0x0000, "4" )
+  COREPORT_DIPNAME( 0x4000, 0x0000, "S15")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x4000, "1" )
+  COREPORT_DIPNAME( 0x8000, 0x0000, "S16")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x8000, "1" )
+PORT_START /* 2 */
+  COREPORT_DIPNAME( 0x0070, 0x0050, "Balls per game")
+    COREPORT_DIPSET(0x0070, "1" )
+    COREPORT_DIPSET(0x0060, "2" )
+    COREPORT_DIPSET(0x0050, "3" )
+    COREPORT_DIPSET(0x0040, "4" )
+    COREPORT_DIPSET(0x0030, "5" )
+    COREPORT_DIPSET(0x0020, "6" )
+    COREPORT_DIPSET(0x0010, "8" )
+    COREPORT_DIPSET(0x0000, "10" )
+  COREPORT_DIPNAME( 0x0001, 0x0000, "S17")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0001, "1" )
+  COREPORT_DIPNAME( 0x0002, 0x0000, "S18")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0002, "1" )
+  COREPORT_DIPNAME( 0x0004, 0x0000, "S19")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0004, "1" )
+  COREPORT_DIPNAME( 0x0008, 0x0000, "S20")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0008, "1" )
+  COREPORT_DIPNAME( 0x0080, 0x0000, "S24")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0080, "1" )
+  COREPORT_DIPNAME( 0x0100, 0x0000, "S25")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0100, "1" )
+  COREPORT_DIPNAME( 0x0200, 0x0000, "S26")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0200, "1" )
+  COREPORT_DIPNAME( 0x0400, 0x0000, "S27")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0400, "1" )
+  COREPORT_DIPNAME( 0x0800, 0x0000, "S28")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x0800, "1" )
+  COREPORT_DIPNAME( 0x1000, 0x0000, "S29")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x1000, "1" )
+  COREPORT_DIPNAME( 0x2000, 0x0000, "S30")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x2000, "1" )
+  COREPORT_DIPNAME( 0x4000, 0x0000, "S31")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x4000, "1" )
+  COREPORT_DIPNAME( 0x8000, 0x0000, "S32")
+    COREPORT_DIPSET(0x0000, "0" )
+    COREPORT_DIPSET(0x8000, "1" )
+INPUT_PORTS_END
 CORE_GAMEDEFNV(walkyria, "Walkyria", 1986, "Joctronic", joctronicS1, 0)
 
 // Pin Ball (1987)
